small changes in "Battles All" table:  - fixed overflow  - finished (true/false) exchanged with glyphicon

--- a/Source/Web/OnlineGames.Web.AiPortal/Content/Site.css
+++ b/Source/Web/OnlineGames.Web.AiPortal/Content/Site.css
@@ -33,3 +33,14 @@ hr {
     font-size: 20px;
     text-align: center;
 }
+
+.clip {
+    -moz-text-overflow: ellpsis;
+    text-overflow: ellipsis;
+}
+
+.overflow {
+    width: 20em;
+    white-space: nowrap;
+    overflow: hidden;
+}
